test/files/neg/bug882.check
bug882.scala:2: error: traits cannot have type parameters with context bounds `: ...'
trait SortedSet[A <% Ordered[A]] {
                                 ^
one error found
